updates adoption from ed027b4474 to 75b42ff6d8