@@ -1,36 +1,31 @@
 package ai.greycos.solver.core.impl.solver.thread;
 
+import java.util.concurrent.Executors;
 import java.util.concurrent.ThreadFactory;
 import java.util.concurrent.atomic.AtomicInteger;
 
-/** Thread factory for creating solver threads with custom naming. */
-public class DefaultSolverThreadFactory implements ThreadFactory {
+import org.jspecify.annotations.NullMarked;
+
+/** Similar to {@link Executors}'s DefaultThreadFactory, but allows settings a namePrefix. */
+@NullMarked
+public final class DefaultSolverThreadFactory implements ThreadFactory {
 
   private static final AtomicInteger poolNumber = new AtomicInteger(1);
 
-  private final ThreadGroup group;
   private final AtomicInteger threadNumber = new AtomicInteger(1);
   private final String namePrefix;
 
-  public DefaultSolverThreadFactory() {
-    this("Solver");
-  }
-
   public DefaultSolverThreadFactory(String threadPrefix) {
-    SecurityManager s = System.getSecurityManager();
-    group = (s != null) ? s.getThreadGroup() : Thread.currentThread().getThreadGroup();
-    namePrefix = "GreyCOS-" + poolNumber.getAndIncrement() + "-" + threadPrefix + "-";
+    namePrefix = "GreyCOS-%d-%s-".formatted(poolNumber.incrementAndGet(), threadPrefix);
   }
 
   @Override
   public Thread newThread(Runnable r) {
-    Thread t = new Thread(group, r, namePrefix + threadNumber.getAndIncrement(), 0);
-    if (t.isDaemon()) {
-      t.setDaemon(false);
-    }
-    if (t.getPriority() != Thread.NORM_PRIORITY) {
-      t.setPriority(Thread.NORM_PRIORITY);
-    }
-    return t;
+    return Thread.ofPlatform()
+        .name(namePrefix + threadNumber.getAndIncrement())
+        .group(Thread.currentThread().getThreadGroup())
+        .priority(Thread.NORM_PRIORITY)
+        .daemon(false)
+        .unstarted(r);
   }
 }
