@@ -1,6 +1,5 @@
 package ai.greycos.solver.core.preview.api.move.builtin;
 
-import java.util.Collections;
 import java.util.List;
 
 import ai.greycos.solver.core.preview.api.cotwin.metamodel.PlanningListVariableMetaModel;
@@ -35,11 +34,15 @@ public final class Moves {
     return new ChangeMove<>(variableMetaModel, entity, value);
   }
 
-  public static <Solution_, Entity_> Move<Solution_> swap(
-      PlanningVariableMetaModel<Solution_, Entity_, Object> variableMetaModel,
+  @SuppressWarnings("unchecked")
+  public static <Solution_, Entity_, Value_> Move<Solution_> swap(
+      PlanningVariableMetaModel<Solution_, Entity_, Value_> variableMetaModel,
       Entity_ leftEntity,
       Entity_ rightEntity) {
-    return swap(Collections.singletonList(variableMetaModel), leftEntity, rightEntity);
+    return swap(
+        List.of((PlanningVariableMetaModel<Solution_, Entity_, Object>) variableMetaModel),
+        leftEntity,
+        rightEntity);
   }
 
   public static <Solution_, Entity_> Move<Solution_> swap(
